--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 @import url('./pretendard.css');
+@import url('./custom_font.css');
 @import url('./toss-face.css');
 
 :root {
@@ -85,7 +86,7 @@ section .clearfix:after {
   bottom: 0;
   background-image: url('./front.jpg');
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: center top 40%;
   background-size: cover;
   opacity: .8;
   content: '';
@@ -114,12 +115,12 @@ section .clearfix:after {
 
 #front .overlay {
   position: absolute;
-  /* background: linear-gradient(
+  background: linear-gradient(
     rgba(41,47,51,0) 0,
-    rgba(41,47,51,.5) 20%,
+    rgba(41,47,51,.5) 33%,
     rgba(41,47,51,.77) 70%,
     rgba(41,47,51,1) 100%
-  ); */
+  );
   height: 40vh;
   bottom: 0;
   right: 0;
