--- a/static/custom_font.css
+++ b/static/custom_font.css
@@ -15,3 +15,30 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'I Love Glitter';
+    src: url('./custom_font/ILoveGlitter.woff2') format('woff2'),
+        url('./custom_font/ILoveGlitter.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Distant Stroke';
+    src: url('./custom_font/DistantStroke-Medium.woff2') format('woff2'),
+        url('./custom_font/DistantStroke-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Distant Stroke';
+    src: url('./custom_font/DistantStroke.woff2') format('woff2'),
+        url('./custom_font/DistantStroke.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
