--- a/static/style.css
+++ b/static/style.css
@@ -93,9 +93,9 @@ section .clearfix:after {
 }
 
 #front h1 {
-  line-height: 6rem;
+  line-height: 7rem;
   font-size: 4rem;
-  margin-bottom: .5rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
