--- a/static/style.css
+++ b/static/style.css
@@ -113,10 +113,11 @@ section .clearfix:after {
 }
 
 #front .date-time {
-  float: center;
+  line-height: 3rem;
   text-align: center;
   font-family: 'Distant Stroke';
   font-size: 1.3rem;
+  position: relative;
 }
 
 #front .overlay {
