--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,24 @@ section .clearfix:after {
   content: '';
 }
 
+#our-story {
+  text-align: center;
+  padding: 0 70px;
+}
+
+#our-story h1 {
+  text-decoration: underline overline;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  padding: 1rem 0 1rem 0;
+  margin: 0;
+}
+
+#our-story div{
+  display: block;
+  text-align: left;
+}
+
 #front {
   height: 100vh;
 }
